Updates from Overleaf

--- a/VTthesis.tex
+++ b/VTthesis.tex
@@ -745,7 +745,7 @@ The source term $q(\vec{r},E)$ (in units of  MeV$^{-1}$ cm$^{-2}$ s$^{-2}$ sr$^{
 \begin{equation}
   q(\vec{r},E) = \frac{c}{4\pi} N_0 \dfrac{dN}{dEdt}\rho(\vec{r}).
 \end{equation}
-The factor $c/4\pi$ is a convention in the {\tt GALPROP} code. The source function is normalized by $N_0$, such that the integration over energy and volume matches Eq.~(\ref{eq:Le}),
+The factor $c/4\pi$ is a convention in the \textsc{galprop} code. The source function is normalized by $N_0$, such that the integration over energy and volume matches Eq.~(\ref{eq:Le}),
 \begin{equation}
   \label{eq:normal}
   N_0 \int E\dfrac{dN}{dEdt}dE \int\rho(\vec{r})dr^3 = L_{e^\pm} = 10 f_{e^\pm} L_\gamma.
@@ -976,7 +976,7 @@ A larger magnetic field means greater energy loss due to synchrotron radiation o
 
 \section{\label{sec:conclu}Discussion and Conclusion}
 
-Recent analyses of the GCE~\cite{2018NatAs...2..387M,2018NatAs...2..819B,2019JCAP...09..042M} have revealed its nonspherical nature and have provided further support for an MSP origin. We have revisited the computation of secondary IC emission from the $e^\pm$ injected by such MSPs. Compared to previous studies that assumed a spherically symmetric spatial distribution of MSPs, we adopted 3D models of the stellar distributions in the Galactic center and numerically calculated the IC emissions using the {\tt GALPROP} code. Furthermore, we systematically explored the impact of diffusion parameter uncertainties with additional {\tt GALPROP} runs. We found that the predicted IC fluxes beyond 100 GeV are within the forecasted sensitivity limits of future gamma-ray telescopes for our baseline parameters (Fig.~\ref{fig:spectrum_diffuse}). The very high-energy IC emission from MSPs is nondegenerate with that caused by DM annihilation, from which the $e^\pm$ can only reach a few tens of GeV if DM is responsible for the GCE.
+Recent analyses of the GCE~\cite{2018NatAs...2..387M,2018NatAs...2..819B,2019JCAP...09..042M} have revealed its nonspherical nature and have provided further support for an MSP origin. We have revisited the computation of secondary IC emission from the $e^\pm$ injected by such MSPs. Compared to previous studies that assumed a spherically symmetric spatial distribution of MSPs, we adopted 3D models of the stellar distributions in the Galactic center and numerically calculated the IC emissions using the \textsc{galprop} code. Furthermore, we systematically explored the impact of diffusion parameter uncertainties with additional \textsc{galprop} runs. We found that the predicted IC fluxes beyond 100 GeV are within the forecasted sensitivity limits of future gamma-ray telescopes for our baseline parameters (Fig.~\ref{fig:spectrum_diffuse}). The very high-energy IC emission from MSPs is nondegenerate with that caused by DM annihilation, from which the $e^\pm$ can only reach a few tens of GeV if DM is responsible for the GCE.
 
 Although the IC spectra from the Galactic center provide insufficient information for identifying the spatial model of the source, we found that the spatial morphology of the IC could serve as a discriminant between the spherically symmetric and 3D stellar distribution injection models (Fig.~\ref{fig:skymap_bulge_vs_nfw}). In the GeV energy range, the IC morphologies are equally elliptical for both the stellar and NFW$^2$ models. However, above $\sim$ TeV energies, they reveal morphological differences that trace the injection distributions. They can therefore be used to discriminate the spherically symmetric and 3D stellar injection models.
 
@@ -984,7 +984,7 @@ Our predicted IC fluxes contribute $\lesssim 10 \%$ of the GCE emission and are 
 
 The detectability of the IC emission depends on the setup, including MSP $e^\pm$ spectrum and propagation parameters. We adopted a canonical $e^\pm$ power-law slope of 2.0, but softer spectra would make it a challenge to detect the IC component at TeV energies (Fig.~\ref{fig:spectrum_spectral}). Furthermore, an increased magnetic field at the Galactic center would reduce the IC emission via enhanced synchrotron energy losses. In particular, assuming a constant magnetic field of magnitude 50 $\mu$G in the inner 400 pc of the Galactic center, we found a reduction of $\sim 1/2$ of the IC emission obtained with the default magnetic field setup. On the other hand, our model predictions were not very sensitive to changes in the propagation parameters within the 95\% credible contours provided in the 2D marginalized posterior distributions of ~\citet{2016ApJ...824...16J}.
 
-There are various assumptions in our calculations that warrant future detailed studies. For example, we used the default ISRF from the {\tt GALPROP} version 54, which is 2D after averaging the angular dependence. This has recently been updated in ~\citet{2017ApJ...846...67P,2018ApJ...856...45J}, where a 3D ISRF was adopted in the context of CR propagation and high-energy gamma-ray emissions in the Galaxy. Their results show nontrivial impacts from employing the 3D ISRF on the propagation parameters of CRs and the gamma-ray intensity maps. Our results may be affected in many ways, including the fluxes and sky maps. Studies with the {\tt PICARD} code show that new ISRFs increase gamma-ray intensities from the Galactic center, in particular at energies of $\sim 200 $ GeV \cite{2019APh...107....1N}. Note however that our Galactic bar parametrization remains consistent with the ISRF of \textsc{galprop}. Even though more recent analyses suggest a larger tilt angle, we found that the left-right bulge asymmetry caused by the tilt is washed out in the IC sky maps, and is certainly smaller than the uncertainty caused by propagation parameters.
+There are various assumptions in our calculations that warrant future detailed studies. For example, we used the default ISRF from the \textsc{galprop} version 54, which is 2D after averaging the angular dependence. This has recently been updated in ~\citet{2017ApJ...846...67P,2018ApJ...856...45J}, where a 3D ISRF was adopted in the context of CR propagation and high-energy gamma-ray emissions in the Galaxy. Their results show nontrivial impacts from employing the 3D ISRF on the propagation parameters of CRs and the gamma-ray intensity maps. Our results may be affected in many ways, including the fluxes and sky maps. Studies with the \textsc{picard} code show that new ISRFs increase gamma-ray intensities from the Galactic center, in particular at energies of $\sim 200 $ GeV \cite{2019APh...107....1N}. Note however that our Galactic bar parametrization remains consistent with the ISRF of \textsc{galprop}. Even though more recent analyses suggest a larger tilt angle, we found that the left-right bulge asymmetry caused by the tilt is washed out in the IC sky maps, and is certainly smaller than the uncertainty caused by propagation parameters.
 
 For the propagation part, we have adopted the results of a wide scan of propagation parameters \cite{2016ApJ...824...16J}. However, caution must be exercised since the propagation properties around the Galactic center may be unique. We also have not covered all possibilities, e.g., we did not consider the possibility of cosmic rays advected out of the region by large-scale outflows. Such outflows may be related to the Fermi bubbles \cite{2015ApJ...808..107C} and depending on the velocity would affect the secondary IC morphology. We have also neglected MSPs in the Galactic disk, which would provide additional $e^\pm$ injection and IC emission. However, population syntheses show that the MSP contribution to the Galactic diffuse gamma-ray emission is at the few-percent level or less \cite{2018ApJ...863..199G} and we do not expect this to substantially affect our results.
 
@@ -1068,7 +1068,7 @@ population of $e^\pm$ launched into the bulge ISM by the
 
 
 
-Recently,~\citet{2019PhRvD..99l3020S} performed detailed simulations (using \textsc{galprop} V54~\citealt{2006ApJ...648L..29P}) of the IC signature from the putative population of MSPs responsible for the GCE. Compared to that work, here we recompute all our spatial maps using the latest version of the code (\textsc{galprop} V56)---which contains new three-dimensional (3D) models for the interstellar radiation fields, Galactic structures, and interstellar gas maps. Furthermore, now we run our simulations in the 3D mode of the \textsc{galprop} framework, abandoning the assumption of Galactocentric cylindrical symmetry. Interestingly, \cite{2019PhRvD..99l3020S} argued that it could be possible for CTA to (i) detect the population of MSPs responsible for the GCE, and (ii) distinguish whether the IC signal emanates from either DM self-annihilation or these unresolved MSPs in the Galactic bulge. 
+Recently,~\citet{2019PhRvD..99l3020S} performed detailed simulations (using \textsc{galprop} v54~\citealt{2006ApJ...648L..29P}) of the IC signature from the putative population of MSPs responsible for the GCE. Compared to that work, here we recompute all our spatial maps using the latest version of the code (\textsc{galprop} v56)---which contains new three-dimensional (3D) models for the interstellar radiation fields, Galactic structures, and interstellar gas maps. Furthermore, now we run our simulations in the 3D mode of the \textsc{galprop} framework, abandoning the assumption of Galactocentric cylindrical symmetry. Interestingly, \cite{2019PhRvD..99l3020S} argued that it could be possible for CTA to (i) detect the population of MSPs responsible for the GCE, and (ii) distinguish whether the IC signal emanates from either DM self-annihilation or these unresolved MSPs in the Galactic bulge. 
 
 Here, we perform a realistic assessment of the sensitivity of CTA to such an unresolved population of MSPs in the Galactic center. Using simulated data, we consider scenarios where the Galactic diffuse emission (GDE) is known accurately, as well as cases where the GDE is mismodeled. In each case, we investigate the necessary conditions for a reliable CTA detection of the MSPs' IC signal. Similarly, we study whether CTA could separate the nature of the source producing the IC emission. As shown in~\citet{2019PhRvD..99l3020S}, the expected IC emission from the Galactic bulge MSPs has morphological differences with respect to the one from DM emission. We now present a systematic study on simulated data that takes into account the latest CTA instrument response function and state-of-the-art models for the GDE to fully address these points.
  
@@ -1334,7 +1334,7 @@ As an example of the IRFs convolution results, we show in Fig.~\ref{fig:counts_s
 \begin{figure}[htb]
     \centering
     \includegraphics[width=\textwidth]{Figures/CTA/spectra-and-counts.pdf}
-    \caption{The predicted gamma-ray spectra for various Galactic diffuse emission components and their corresponding CTA count rates for 500 hours of observations of the inner $10^\circ \times 10^\circ$ of the Galactic center region. The left panel displays the bin-by-bin fluxes of the IC (green points) and gas-correlated (red points) components of the Galactic diffuse emission measured by \textit{Fermi}-LAT~\citep{2017ApJ...840...43A}. The green solid and red dashed lines are the spectra predicted by \textsc{galprop V56}. These are normalized to match the \textit{Fermi}-LAT observations at GeV-scale energies. The blue dotted line corresponds to the best fit low-latitude Fermi bubbles spectra in~\citep{2017ApJ...840...43A} extrapolated to higher energies (this is our FB$_{\rm min}$ model in Table~\ref{tab:FBmodels}). The cyan dotted line is the maximum possible emission that the FBs can take at TeV-scale energy [FB$_{\rm max}$ model in Table~\ref{tab:FBmodels}---this is the same as in Fig.1 of~\citet{2021PhRvD.103b3011R}]. The right plot shows the result of convolving the Galactic diffuse emission components in the left panel with the CTA instrument response functions. The irreducible cosmic ray background (CR background) is also shown, see Sec.~\ref{subsec:expectedcounts} for details.}
+    \caption{The predicted gamma-ray spectra for various Galactic diffuse emission components and their corresponding CTA count rates for 500 hours of observations of the inner $10^\circ \times 10^\circ$ of the Galactic center region. The left panel displays the bin-by-bin fluxes of the IC (green points) and gas-correlated (red points) components of the Galactic diffuse emission measured by \textit{Fermi}-LAT~\citep{2017ApJ...840...43A}. The green solid and red dashed lines are the spectra predicted by \textsc{galprop} v56. These are normalized to match the \textit{Fermi}-LAT observations at GeV-scale energies. The blue dotted line corresponds to the best fit low-latitude Fermi bubbles spectra in~\citep{2017ApJ...840...43A} extrapolated to higher energies (this is our FB$_{\rm min}$ model in Table~\ref{tab:FBmodels}). The cyan dotted line is the maximum possible emission that the FBs can take at TeV-scale energy [FB$_{\rm max}$ model in Table~\ref{tab:FBmodels}---this is the same as in Fig.1 of~\citet{2021PhRvD.103b3011R}]. The right plot shows the result of convolving the Galactic diffuse emission components in the left panel with the CTA instrument response functions. The irreducible cosmic ray background (CR background) is also shown, see Sec.~\ref{subsec:expectedcounts} for details.}
     \label{fig:counts_spectra}
 \end{figure}
 
@@ -1355,7 +1355,7 @@ where $\boldsymbol{n}=\{n_{ij}\}$ is the simulated data, and the model $\boldsym
 \begin{equation}\label{eq:superposition}
     \mu_{ij}(\boldsymbol{\alpha}) = \sum_{m} \alpha_{m} \Phi^m_{ij}, 
 \end{equation}
-with $\Phi^m_{ij}$ as given in Eq.~\ref{eq:expectedcounts}, and the flux normalizations $\alpha_m$ are the fitting parameters. The optimization is done with the \textsc{minuit}~\citep{Nelder:1965zz} algorithm contained in the \texttt{iminuit} package.\footnote{\url{https://iminuit.readthedocs.io/en/stable/}} 
+with $\Phi^m_{ij}$ as given in Eq.~\ref{eq:expectedcounts}, and the flux normalizations $\alpha_m$ are the fitting parameters. The optimization is done with the \textsc{minuit}~\citep{Nelder:1965zz} algorithm contained in the \textsc{iminuit} package.\footnote{\url{https://iminuit.readthedocs.io/en/stable/}} 
 
 For each independent energy bin, we simultaneously fit the flux normalizations of all the background and signal components within our $10^\circ \times 10^\circ$ and $|b|\geq 0.3^\circ$ RoI. The normalizations of the sources considered are insensitive to the spectral shape assumed at each energy bin due to the bins being small.  This fitting approach, also known as a bin-by-bin analysis, has been widely used in the analysis of \textit{Fermi}-LAT data~\cite[e.g.,][]{2015PhRvL.115w1301A}. The advantage of this method over the more traditional broad-band analysis~\citep[e.g.,][]{2021PhRvD.103b3011R,2021JCAP...01..057A}, is that the bin-by-bin method is much less affected by assumptions about the spectral shape of the model templates. 
 
@@ -1420,7 +1420,7 @@ In the left panels of Fig.~\ref{fig:Injection_perfectGDE} we present the TS dist
 with the CTA
 and an accurate knowledge of the astrophysical backgrounds (corresponding to the most optimistic scenario considered in this chapter) the technique presented here should be able to detect the IC signal from the putative Galactic center MSP population, thereby allowing us to constrain the source populations generating the high-energy gamma rays in this sky region.
 
-For this same case scenario, we present details of the recovered spectra in Fig.~\ref{fig:RecoveredSpectrum_perfectGDEFBmin}. Each panel in this figure shows the characteristics of the spectra that are recovered with a $5\sigma$ detection significance. The five different panels correspond to each $e^\pm$ injection model presented in Table~\ref{tab:mspspectrum}. As explained in Sec.~\ref{sec:ICfromMSPs}, we propagate such $e^\pm$ within the \textsc{galprop} V56 framework, then produce IC spectral templates (red solid lines), and lastly inject these signal maps into the simulated data. We obtained the results in this figure by fitting the mock data with a bin-by-bin fitting procedure that allows us to work out the fluxes and corresponding 68\% confidence intervals (blue filled regions) at each independent energy bin. Fluxes larger than those shown in these panels should be successfully detected by CTA, provided the parent $e^\pm$'s are injected by an unresolved population of MSPs (tracing the distribution of stellar mass in the Galactic bulge) and the Galactic diffuse background is perfectly modeled. We also present a summary of the minimum $L_{\gamma,{\rm IC}}$ (and $L_{e^\pm}$) 
+For this same case scenario, we present details of the recovered spectra in Fig.~\ref{fig:RecoveredSpectrum_perfectGDEFBmin}. Each panel in this figure shows the characteristics of the spectra that are recovered with a $5\sigma$ detection significance. The five different panels correspond to each $e^\pm$ injection model presented in Table~\ref{tab:mspspectrum}. As explained in Sec.~\ref{sec:ICfromMSPs}, we propagate such $e^\pm$ within the \textsc{galprop} v56 framework, then produce IC spectral templates (red solid lines), and lastly inject these signal maps into the simulated data. We obtained the results in this figure by fitting the mock data with a bin-by-bin fitting procedure that allows us to work out the fluxes and corresponding 68\% confidence intervals (blue filled regions) at each independent energy bin. Fluxes larger than those shown in these panels should be successfully detected by CTA, provided the parent $e^\pm$'s are injected by an unresolved population of MSPs (tracing the distribution of stellar mass in the Galactic bulge) and the Galactic diffuse background is perfectly modeled. We also present a summary of the minimum $L_{\gamma,{\rm IC}}$ (and $L_{e^\pm}$) 
 required for a CTA detection in Table~\ref{tab:minimumluminosities}.
 
 \begin{figure}
@@ -1669,7 +1669,7 @@ We have propagated the $e^\pm$ pairs---injected by the putative GC population of
 \begin{figure}[htb]
     \begin{center}
     \includegraphics[width=0.7\textwidth]{Figures/CTA/positrons_at_Earth.pdf}
-    \caption{Total Galactic bulge MSP contribution (assumed to be equal numbers of positrons and electrons) to the measured CRs $e^+$ spectrum at Earth~\citep{2021PhR...894....1A}. The blue band shows the $e^\pm$ injection efficiencies in the range $\approx 2.9$--74.1\%, which are required for a robust CTA detection of the IC emission from the Galactic bulge population that explains the GCE. The $e^\pm$ injection spectra corresponds to the baseline in Table~\ref{tab:mspspectrum}.  The positrons from Galactic bulge MSPs have been propagated using \textsc{GALPROP} v56 and the propagation parameter setup in Table~\ref{tab:galpropsetup}. We have neglected the effect of solar modulation for energies greater than 10 GeV, as suggested by~\citet{2014AdSpR..53.1015S}.}\label{fig:MSPpositronsatEarth}
+    \caption{Total Galactic bulge MSP contribution (assumed to be equal numbers of positrons and electrons) to the measured CRs $e^+$ spectrum at Earth~\citep{2021PhR...894....1A}. The blue band shows the $e^\pm$ injection efficiencies in the range $\approx 2.9$--74.1\%, which are required for a robust CTA detection of the IC emission from the Galactic bulge population that explains the GCE. The $e^\pm$ injection spectra corresponds to the baseline in Table~\ref{tab:mspspectrum}.  The positrons from Galactic bulge MSPs have been propagated using \textsc{galprop} v56 and the propagation parameter setup in Table~\ref{tab:galpropsetup}. We have neglected the effect of solar modulation for energies greater than 10 GeV, as suggested by~\citet{2014AdSpR..53.1015S}.}\label{fig:MSPpositronsatEarth}
     \end{center}
  \end{figure}
 
@@ -1814,7 +1814,7 @@ We consider the \citet{1996AJ....112.1487H} catalog (2010 edition), which contai
     \label{fig:all_sky_distribution}
 \end{figure}
 
-The origin of the gamma-ray emission from GCs can be studied by comparing its dependency on GC properties. IC emission is sensitive to the ambient photon field on which the $e^\pm$ scatter. \citet{2011ApJ...726..100H} reported a positive correlation between the gamma-ray luminosity $L_\gamma$ and the photon field energy density at the cluster location, indicating an IC contribution. In the present work, we improve upon the Galactic radiation field model used by \citet{2011ApJ...726..100H} by extracting the energy density of the interstellar radiation at the locations of the GCs from the three-dimensional interstellar radiation model in \texttt{GALPROP v56}\footnote{\url{http://galprop.stanford.edu/}}~\citep{2017ApJ...846...67P,2018ApJ...856...45J}. This is a fully 3D model that combines the CMB, infrared, and optical photons of the Milky Way, denoted as $u_\text{MW}$. In addition, photons from stars in the GCs are expected to make a dominant contribution to the total, ambient radiation field. We estimate this component by
+The origin of the gamma-ray emission from GCs can be studied by comparing its dependency on GC properties. IC emission is sensitive to the ambient photon field on which the $e^\pm$ scatter. \citet{2011ApJ...726..100H} reported a positive correlation between the gamma-ray luminosity $L_\gamma$ and the photon field energy density at the cluster location, indicating an IC contribution. In the present work, we improve upon the Galactic radiation field model used by \citet{2011ApJ...726..100H} by extracting the energy density of the interstellar radiation at the locations of the GCs from the three-dimensional interstellar radiation model in \textsc{galprop} v56\footnote{\url{http://galprop.stanford.edu/}}~\citep{2017ApJ...846...67P,2018ApJ...856...45J}. This is a fully 3D model that combines the CMB, infrared, and optical photons of the Milky Way, denoted as $u_\text{MW}$. In addition, photons from stars in the GCs are expected to make a dominant contribution to the total, ambient radiation field. We estimate this component by
 \begin{equation}
     u_{\text{GC}} = \dfrac{L_*}{4\pi c r_h^2},
     \label{eq:GCRF}
@@ -1893,7 +1893,7 @@ Terzan 5 & 1400.00 & -0.23 & 6.17 & 4.80 & 98.73 & 6.90 & $3.93 \pm 0.20$ & $38.
 
 We use 8 years of \textit{Fermi}-LAT data, from 2008 August 4 to 2016 August 2. This constitutes the same data as the 4FGL. The newest Pass 8 data release is applied. As recommended by the \textit{Fermi}-LAT data analysis documentation\footnote{\url{http://fermi.gsfc.nasa.gov/ssc/data/analysis/}}, the event class for the analysis is "P8 Source" class (evclass=128) and the event type is "FRONT+BACK" (evtype=3). We use a 90$^{\circ}$ zenith angle cut to remove Earth limb events and filter the data by (DATA\_QUAL>0)\&\&(LAT\_CONFIG==1). The corresponding instrument response function is $\texttt{P8R3\_SOURCE\_V2}$. For our analysis, the \textit{Fermipy} software version \textit{0.18.0} is used, together with the \textit{Fermi Science Tools} version \textit{1.2.21}.
 
-For 30 GCs detected by the 4FGL, we simply reanalyse the 4FGL gamma-ray source. We use a 10$^{\circ}$ by 10$^{\circ}$ Region-of-Interest around the source with a 0.1$^{\circ}$ by 0.1$^{\circ}$ bin size. Photons from 300 MeV to 500 GeV are analysed using 9 logarithmic bins. Given that we use a different Region-of-Interest size and photon class compared to those adopted in the construction of the 4FGL, additional point sources might emerge in our Region-of-Interest. However, since we use the same observation time as in the 4FGL, the impact of those potential new sources is expected to be minimal. Therefore, we only include known 4FGL sources in our analysis. As recommended by the Fermi team, we re-run a maximum likelihood analysis that starts from the best-fit parameter values found in the 4FGL and updating accordingly. The most recent Galactic interstellar emission model \texttt{gll\_iem\_v07} and the isotropic component \texttt{iso\_P8R3\_SOURCE\_V2\_v1} are employed as fore/backgrounds with free-floating normalization. We have followed the \textit{Fermipy} recommended procedure\footnote{\url{http://fermipy.readthedocs.io/en/latest/quickstart.html}} and fixed the spectral parameters of the sources with TS < 10 and 10 < Npred < 100 to their 4FGL values. However, the spectral parameters of the 4FGL sources lying within 5$^{\circ}$ of the Region-of-Interest center are allowed to float freely. The \texttt{MINUIT} algorithm is used to determine the best-fit parameters of the sources for each energy bin independently.
+For 30 GCs detected by the 4FGL, we simply reanalyse the 4FGL gamma-ray source. We use a 10$^{\circ}$ by 10$^{\circ}$ Region-of-Interest around the source with a 0.1$^{\circ}$ by 0.1$^{\circ}$ bin size. Photons from 300 MeV to 500 GeV are analysed using 9 logarithmic bins. Given that we use a different Region-of-Interest size and photon class compared to those adopted in the construction of the 4FGL, additional point sources might emerge in our Region-of-Interest. However, since we use the same observation time as in the 4FGL, the impact of those potential new sources is expected to be minimal. Therefore, we only include known 4FGL sources in our analysis. As recommended by the Fermi team, we re-run a maximum likelihood analysis that starts from the best-fit parameter values found in the 4FGL and updating accordingly. The most recent Galactic interstellar emission model \texttt{gll\_iem\_v07} and the isotropic component \texttt{iso\_P8R3\_SOURCE\_V2\_v1} are employed as fore/backgrounds with free-floating normalization. We have followed the \textit{Fermipy} recommended procedure\footnote{\url{http://fermipy.readthedocs.io/en/latest/quickstart.html}} and fixed the spectral parameters of the sources with TS < 10 and 10 < Npred < 100 to their 4FGL values. However, the spectral parameters of the 4FGL sources lying within 5$^{\circ}$ of the Region-of-Interest center are allowed to float freely. The \textsc{MINUIT} algorithm is used to determine the best-fit parameters of the sources for each energy bin independently.
 
 For the 127 additional GCs in the \citet{1996AJ....112.1487H} catalog without 4FGL detections, we estimate the 95\% C.L. gamma-ray upper limits from their locations. More specifically, we place a point source at the coordinates of those GCs. The point source is assumed to have a power-law spectrum $dN/dE\sim E^{-\Gamma}$ with fixed index $\Gamma = 2$. We applied the same pipeline used on the set of detected GCs and obtained the 95\% C.L. flux upper limits on the putative point sources placed at the GCs locations.
 
@@ -3378,9 +3378,9 @@ Our discoveries set the stage for many future observations. We have shown in Cha
 % Add your appendices here. You must leave the appendices enclosed in the appendices environment in order for the table of contents to be correct.
 \begin{appendices}
 
-\chapter{Inverse Compton energy loss and spectrum}\label{app:IC}
+% \chapter{Inverse Compton energy loss and spectrum}\label{app:IC}
 
-The inverse Compton scattering
+% The inverse Compton scattering
 
 \chapter{Globular cluster parameters and spectra} \label{app:glbcs}
   
