--- a/VTthesis.bib
+++ b/VTthesis.bib
@@ -6268,3 +6268,37 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/1998Natur.394..344W},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{1983ApJ...270..365M,
+       author = {{Milgrom}, M.},
+        title = "{A modification of the Newtonian dynamics as a possible alternative to the hidden mass hypothesis.}",
+      journal = {\apj},
+     keywords = {Cosmology, Galactic Structure, Nonrelativistic Mechanics, Stellar Motions, Particle Acceleration, Solar System, Astrophysics},
+         year = 1983,
+        month = jul,
+       volume = {270},
+        pages = {365-370},
+          doi = {10.1086/161130},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1983ApJ...270..365M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2013ApJ...764...35M,
+       author = {{Mao}, Yao-Yuan and {Strigari}, Louis E. and {Wechsler}, Risa H. and {Wu}, Hao-Yi and {Hahn}, Oliver},
+        title = "{Halo-to-halo Similarity and Scatter in the Velocity Distribution of Dark Matter}",
+      journal = {\apj},
+     keywords = {dark matter, Galaxy: halo, Astrophysics - Cosmology and Extragalactic Astrophysics, Astrophysics - Galaxy Astrophysics, High Energy Physics - Phenomenology},
+         year = 2013,
+        month = feb,
+       volume = {764},
+       number = {1},
+          eid = {35},
+        pages = {35},
+          doi = {10.1088/0004-637X/764/1/35},
+archivePrefix = {arXiv},
+       eprint = {1210.2721},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013ApJ...764...35M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
