--- a/VTthesis.bib
+++ b/VTthesis.bib
@@ -6302,3 +6302,54 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2014ApJ...789...13B,
+       author = {{Bulbul}, Esra and {Markevitch}, Maxim and {Foster}, Adam and {Smith}, Randall K. and {Loewenstein}, Michael and {Randall}, Scott W.},
+        title = "{Detection of an Unidentified Emission Line in the Stacked X-Ray Spectrum of Galaxy Clusters}",
+      journal = {\apj},
+     keywords = {dark matter, elementary particles, line: identification, neutrinos, X-rays: galaxies: clusters, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2014,
+        month = jul,
+       volume = {789},
+       number = {1},
+          eid = {13},
+        pages = {13},
+          doi = {10.1088/0004-637X/789/1/13},
+archivePrefix = {arXiv},
+       eprint = {1402.2301},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014ApJ...789...13B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2002PrPNP..48..161V,
+       author = {{Volkas}, R.~R.},
+        title = "{Introduction to sterile neutrinos}",
+      journal = {Progress in Particle and Nuclear Physics},
+     keywords = {High Energy Physics - Phenomenology},
+         year = 2002,
+        month = jul,
+       volume = {48},
+       number = {1},
+        pages = {161-174},
+          doi = {10.1016/S0146-6410(02)00122-9},
+archivePrefix = {arXiv},
+       eprint = {hep-ph/0111326},
+ primaryClass = {hep-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002PrPNP..48..161V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1978ApJ...225L..11L,
+       author = {{Leventhal}, M. and {MacCallum}, C.~J. and {Stang}, P.~D.},
+        title = "{Detection of 511 keV positron annihilation radiation from the galactic center direction.}",
+      journal = {\apjl},
+     keywords = {Balloon Sounding, Galactic Radiation, Gamma Ray Astronomy, Milky Way Galaxy, Positron Annihilation, Balloon-Borne Instruments, Energy Spectra, Telescopes, Astronomy, Galactic Center:Gamma Rays},
+         year = 1978,
+        month = oct,
+       volume = {225},
+        pages = {L11-L14},
+          doi = {10.1086/182782},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1978ApJ...225L..11L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
